Last changed added

--- a/BetAndRuin 21/src/Etiquetas.properties
+++ b/BetAndRuin 21/src/Etiquetas.properties
@@ -1,5 +1,5 @@
 #Direct ResourceBundle
-#Tue Mar 02 17:54:37 CET 2021
+#Wed Mar 03 18:07:03 CET 2021
 EventDate=Event Date
 NoEvents=There are no events 
 MainGUI_User.createQuestionBtn.text=Cancel Bets
@@ -23,6 +23,7 @@ CreateQuestion=Cancel Bets
 BrowseQuestions=Browse Questions
 ErrorNumber=Error\: Introduce a positive number
 EventN=Event\#
-SelectUseCase=Select Use Case
+SelectUseCase=Welcome
 Event=Event
+Welcome=Welcome
 QuestionCreated=Question created
