First Step to Bet(Axi)

--- a/BetAndRuin 21/src/Etiquetas.properties
+++ b/BetAndRuin 21/src/Etiquetas.properties
@@ -1,11 +1,11 @@
 #Direct ResourceBundle
-#Wed Mar 03 18:07:03 CET 2021
+#Wed Mar 03 23:38:35 CET 2021
 EventDate=Event Date
 NoEvents=There are no events 
 MainGUI_User.createQuestionBtn.text=Cancel Bets
 Questions=Questions
-SelectedEvent=Questions for the event
 ErrorQuestion=Error\: Introduce a question
+SelectedEvent=Questions for the event
 Accept=Accept
 MainTitle=Bet & Ruin project
 QuestionAlreadyExist=Question Already Exists
@@ -17,6 +17,7 @@ NoQuestions=There are no questions yet for the event
 ErrorEventHasFinished=Error\: Event Has Finished
 Events=Events
 Question=Question
+BrowseQuestionsGUI.lblNewLabel.text=Enter betting amount\:
 MinimumBetPrice=Min Bet 
 ErrorQuestionAlreadyExist=Error\: Question Already Exists
 CreateQuestion=Cancel Bets
@@ -26,4 +27,5 @@ EventN=Event\#
 SelectUseCase=Welcome
 Event=Event
 Welcome=Welcome
+BrowseQuestionsGUI.btnNewButton.text=Bet
 QuestionCreated=Question created
