--- a/BetAndRuin 21/src/Etiquetas.properties
+++ b/BetAndRuin 21/src/Etiquetas.properties
@@ -1,11 +1,12 @@
 #Direct ResourceBundle
-#Wed Mar 03 23:38:35 CET 2021
+#Thu Mar 04 15:26:06 CET 2021
 EventDate=Event Date
 NoEvents=There are no events 
 MainGUI_User.createQuestionBtn.text=Cancel Bets
 Questions=Questions
-ErrorQuestion=Error\: Introduce a question
 SelectedEvent=Questions for the event
+ErrorQuestion=Error\: Introduce a question
+MainGUI.btnNewButton.text=Register
 Accept=Accept
 MainTitle=Bet & Ruin project
 QuestionAlreadyExist=Question Already Exists
@@ -23,6 +24,7 @@ ErrorQuestionAlreadyExist=Error\: Question Already Exists
 CreateQuestion=Cancel Bets
 BrowseQuestions=Browse Questions
 ErrorNumber=Error\: Introduce a positive number
+MainGUI.btnNewButton_1.text=Login
 EventN=Event\#
 SelectUseCase=Welcome
 Event=Event
