--- a/BetAndRuin 21/src/Etiquetas.properties
+++ b/BetAndRuin 21/src/Etiquetas.properties
@@ -1,11 +1,11 @@
 #Direct ResourceBundle
-#Thu Mar 04 15:26:06 CET 2021
+#Thu Mar 04 17:41:19 CET 2021
 EventDate=Event Date
 NoEvents=There are no events 
 MainGUI_User.createQuestionBtn.text=Cancel Bets
 Questions=Questions
-SelectedEvent=Questions for the event
 ErrorQuestion=Error\: Introduce a question
+SelectedEvent=Questions for the event
 MainGUI.btnNewButton.text=Register
 Accept=Accept
 MainTitle=Bet & Ruin project
@@ -27,6 +27,7 @@ ErrorNumber=Error\: Introduce a positive number
 MainGUI.btnNewButton_1.text=Login
 EventN=Event\#
 SelectUseCase=Welcome
+MainGUI_User.BifunctionalBtn.text=Cancel Bets
 Event=Event
 Welcome=Welcome
 BrowseQuestionsGUI.btnNewButton.text=Bet
