Implement the answers in the BrowseQuestionsGUI

--- a/BetAndRuin 21/src/Etiquetas.properties
+++ b/BetAndRuin 21/src/Etiquetas.properties
@@ -1,11 +1,12 @@
 #Direct ResourceBundle
-#Thu Mar 04 17:41:19 CET 2021
+#Tue Apr 13 14:56:27 CEST 2021
 EventDate=Event Date
 NoEvents=There are no events 
 MainGUI_User.createQuestionBtn.text=Cancel Bets
+BrowseQuestionsGUI.answerLbl.text=Bet on\:
 Questions=Questions
-ErrorQuestion=Error\: Introduce a question
 SelectedEvent=Questions for the event
+ErrorQuestion=Error\: Introduce a question
 MainGUI.btnNewButton.text=Register
 Accept=Accept
 MainTitle=Bet & Ruin project
@@ -14,11 +15,12 @@ ListEvents=List of events
 Price=Price
 Close=Close
 QuestionN=Question\#
+BrowseQuestionsGUI.lblBetOn.text=Bet on\:
 NoQuestions=There are no questions yet for the event 
 ErrorEventHasFinished=Error\: Event Has Finished
 Events=Events
 Question=Question
-BrowseQuestionsGUI.lblNewLabel.text=Enter betting amount\:
+BrowseQuestionsGUI.lblNewLabel.text=Enter amount ($);
 MinimumBetPrice=Min Bet 
 ErrorQuestionAlreadyExist=Error\: Question Already Exists
 CreateQuestion=Cancel Bets
@@ -32,3 +34,4 @@ Event=Event
 Welcome=Welcome
 BrowseQuestionsGUI.btnNewButton.text=Bet
 QuestionCreated=Question created
+BrowseQuestionsGUI.lblEnterAmount.text=Enter amount ($)\:
