Ahal izan dudan bezala BrowseGUI-n answer-ak sartu

--- a/BetAndRuin 21/src/Etiquetas.properties
+++ b/BetAndRuin 21/src/Etiquetas.properties
@@ -1,12 +1,12 @@
 #Direct ResourceBundle
-#Tue Apr 13 14:56:27 CEST 2021
+#Tue Apr 13 19:25:11 CEST 2021
 EventDate=Event Date
 NoEvents=There are no events 
 MainGUI_User.createQuestionBtn.text=Cancel Bets
-BrowseQuestionsGUI.answerLbl.text=Bet on\:
+BrowseQuestionsGUI.answerLbl.text=No question selected
 Questions=Questions
-SelectedEvent=Questions for the event
 ErrorQuestion=Error\: Introduce a question
+SelectedEvent=Questions for the event
 MainGUI.btnNewButton.text=Register
 Accept=Accept
 MainTitle=Bet & Ruin project
