--- a/BetAndRuin 21/.classpath
+++ b/BetAndRuin 21/.classpath
@@ -8,5 +8,6 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="resources/jcalendar-1.4.jar"/>
 	<classpathentry kind="lib" path="resources/objectdb.jar"/>
+	<classpathentry kind="lib" path="jgoodies-forms-1.8.0.jar" sourcepath="jgoodies-forms-1.8.0-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
