Insert Money GUI done, View Profile Implemented and GUI made also.

--- a/BetAndRuin 21/src/Etiquetas.properties
+++ b/BetAndRuin 21/src/Etiquetas.properties
@@ -1,12 +1,12 @@
 #Direct ResourceBundle
-#Tue Apr 13 19:25:11 CEST 2021
+#Thu Apr 15 14:42:06 CEST 2021
 EventDate=Event Date
 NoEvents=There are no events 
 MainGUI_User.createQuestionBtn.text=Cancel Bets
 BrowseQuestionsGUI.answerLbl.text=No question selected
 Questions=Questions
-ErrorQuestion=Error\: Introduce a question
 SelectedEvent=Questions for the event
+ErrorQuestion=Error\: Introduce a question
 MainGUI.btnNewButton.text=Register
 Accept=Accept
 MainTitle=Bet & Ruin project
@@ -29,7 +29,7 @@ ErrorNumber=Error\: Introduce a positive number
 MainGUI.btnNewButton_1.text=Login
 EventN=Event\#
 SelectUseCase=Welcome
-MainGUI_User.BifunctionalBtn.text=Cancel Bets
+MainGUI_User.BifunctionalBtn.text=View Profile
 Event=Event
 Welcome=Welcome
 BrowseQuestionsGUI.btnNewButton.text=Bet
