Insert Money, View Profile still needs list configuration

--- a/BetAndRuin 21/src/Etiquetas.properties
+++ b/BetAndRuin 21/src/Etiquetas.properties
@@ -1,5 +1,5 @@
 #Direct ResourceBundle
-#Thu Apr 15 14:42:06 CEST 2021
+#Thu Apr 15 18:05:55 CEST 2021
 EventDate=Event Date
 NoEvents=There are no events 
 MainGUI_User.createQuestionBtn.text=Cancel Bets
@@ -16,6 +16,7 @@ Price=Price
 Close=Close
 QuestionN=Question\#
 BrowseQuestionsGUI.lblBetOn.text=Bet on\:
+BrowseQuestionsGUI.MessageTextArea.text=\ 
 NoQuestions=There are no questions yet for the event 
 ErrorEventHasFinished=Error\: Event Has Finished
 Events=Events
