Introduced Answers to CreateQuestionGUI

--- a/BetAndRuin 21/src/Etiquetas.properties
+++ b/BetAndRuin 21/src/Etiquetas.properties
@@ -1,22 +1,24 @@
 #Direct ResourceBundle
-#Thu Apr 15 18:05:55 CEST 2021
+#Wed Apr 21 17:44:05 CEST 2021
 EventDate=Event Date
 NoEvents=There are no events 
 MainGUI_User.createQuestionBtn.text=Cancel Bets
 BrowseQuestionsGUI.answerLbl.text=No question selected
 Questions=Questions
-SelectedEvent=Questions for the event
 ErrorQuestion=Error\: Introduce a question
+SelectedEvent=Questions for the event
 MainGUI.btnNewButton.text=Register
 Accept=Accept
 MainTitle=Bet & Ruin project
 QuestionAlreadyExist=Question Already Exists
 ListEvents=List of events
 Price=Price
+CreateQuestionGUI.lblNewLabel.text=Answers
 Close=Close
 QuestionN=Question\#
 BrowseQuestionsGUI.lblBetOn.text=Bet on\:
 BrowseQuestionsGUI.MessageTextArea.text=\ 
+CreateQuestionGUI.textField.text=\ 
 NoQuestions=There are no questions yet for the event 
 ErrorEventHasFinished=Error\: Event Has Finished
 Events=Events
