--- a/BetAndRuin 21/src/Etiquetas_eus.properties
+++ b/BetAndRuin 21/src/Etiquetas_eus.properties
@@ -23,3 +23,4 @@ QuestionCreated=Galdera sortuta
 QuestionN=Galdera#
 SelectedEvent=Galderak hurrengo gertaerarako
 SelectUseCase=Aukeratu Erabilpen-Kasua
+ViewProfile=Ikusi Profila
