Logout etiquette up and running

--- a/BetAndRuin 21/src/Etiquetas_eus.properties
+++ b/BetAndRuin 21/src/Etiquetas_eus.properties
@@ -24,3 +24,4 @@ QuestionN=Galdera#
 SelectedEvent=Galderak hurrengo gertaerarako
 SelectUseCase=Aukeratu Erabilpen-Kasua
 ViewProfile=Ikusi Profila
+Logout=Itxi Sesioa
