Minimum Bet added to BrowseQuestionGUI

--- a/BetAndRuin 21/src/Etiquetas_eus.properties
+++ b/BetAndRuin 21/src/Etiquetas_eus.properties
@@ -21,6 +21,7 @@ Questions=Galderak
 Question=Galdera
 QuestionCreated=Galdera sortuta
 QuestionN=Galdera#
+MinimumBet=Gutxienez
 SelectedEvent=Galderak hurrengo gertaerarako
 SelectUseCase=Aukeratu Erabilpen-Kasua
 ViewProfile=Ikusi Profila
