--- a/BetAndRuin 21/src/Etiquetas.properties
+++ b/BetAndRuin 21/src/Etiquetas.properties
@@ -1,5 +1,5 @@
 #Direct ResourceBundle
-#Wed Apr 21 17:44:05 CEST 2021
+#Tue May 11 17:45:53 CEST 2021
 EventDate=Event Date
 NoEvents=There are no events 
 MainGUI_User.createQuestionBtn.text=Cancel Bets
@@ -13,7 +13,7 @@ MainTitle=Bet & Ruin project
 QuestionAlreadyExist=Question Already Exists
 ListEvents=List of events
 Price=Price
-CreateQuestionGUI.lblNewLabel.text=Answers
+CreateQuestionGUI.lblNewLabel.text=Answers\:
 Close=Close
 QuestionN=Question\#
 BrowseQuestionsGUI.lblBetOn.text=Bet on\:
@@ -22,11 +22,12 @@ CreateQuestionGUI.textField.text=\
 NoQuestions=There are no questions yet for the event 
 ErrorEventHasFinished=Error\: Event Has Finished
 Events=Events
-Question=Question
-BrowseQuestionsGUI.lblNewLabel.text=Enter amount ($);
-MinimumBetPrice=Min Bet 
+Question=Question\:
+BrowseQuestionsGUI.lblNewLabel.text=Rate of Profit\:
+MinimumBetPrice=Min Bet\:
 ErrorQuestionAlreadyExist=Error\: Question Already Exists
 CreateQuestion=Cancel Bets
+CreateQuestionGUI.lblRates.text=Rates\:
 BrowseQuestions=Browse Questions
 ErrorNumber=Error\: Introduce a positive number
 MainGUI.btnNewButton_1.text=Login
