--- a/BetAndRuin 21/src/Etiquetas_eus.properties
+++ b/BetAndRuin 21/src/Etiquetas_eus.properties
@@ -6,7 +6,7 @@ ErrorEventHasFinished=Errorea\: Gertaera amaitu egin da
 ErrorNumber=Errorea: Zenbaki positiboa sartu
 ErrorQuestion=Error\: Galdera sartu
 ErrorQuestionAlreadyExist=Error\: Galdera existitzen da 
-ErrorAnswer=Error\: Sartu erantzun berri bat
+ErrorAnswer=Error\: Sartu erantzun eta ehuneko berri bat
 Event=Gertaera
 EventDate=Gertaera eguna
 EventN=Gertaera#
@@ -22,6 +22,9 @@ Question=Galdera
 QuestionCreated=Galdera sortuta
 QuestionN=Galdera#
 MinimumBet=Gutxienez
+Answer=Erantzuna
+AnswerN=Erantzuna#
+Rate=Pertzentaia(%)
 SelectedEvent=Galderak hurrengo gertaerarako
 SelectUseCase=Aukeratu Erabilpen-Kasua
 ViewProfile=Ikusi Profila
