Insert Results GUI and buttons created/managed

--- a/BetAndRuin 21/src/Etiquetas.properties
+++ b/BetAndRuin 21/src/Etiquetas.properties
@@ -1,5 +1,5 @@
 #Direct ResourceBundle
-#Tue May 11 17:45:53 CEST 2021
+#Wed May 12 22:23:49 CEST 2021
 EventDate=Event Date
 NoEvents=There are no events 
 MainGUI_User.createQuestionBtn.text=Cancel Bets
@@ -39,3 +39,4 @@ Welcome=Welcome
 BrowseQuestionsGUI.btnNewButton.text=Bet
 QuestionCreated=Question created
 BrowseQuestionsGUI.lblEnterAmount.text=Enter amount ($)\:
+MainGUI.btnInsertResults.text=Insert Results
