--- a/BetAndRuin 21/src/Etiquetas_eus.properties
+++ b/BetAndRuin 21/src/Etiquetas_eus.properties
@@ -29,3 +29,4 @@ SelectedEvent=Galderak hurrengo gertaerarako
 SelectUseCase=Aukeratu Erabilpen-Kasua
 ViewProfile=Ikusi Profila
 Logout=Itxi Sesioa
+btnInsertResults=Emaitzak ezarri
