different types of answers (not finishes)

--- a/BetAndRuin 21/src/Etiquetas.properties
+++ b/BetAndRuin 21/src/Etiquetas.properties
@@ -1,5 +1,5 @@
 #Direct ResourceBundle
-#Tue May 11 17:45:53 CEST 2021
+#Wed May 12 20:49:37 CEST 2021
 EventDate=Event Date
 NoEvents=There are no events 
 MainGUI_User.createQuestionBtn.text=Cancel Bets
@@ -14,11 +14,11 @@ QuestionAlreadyExist=Question Already Exists
 ListEvents=List of events
 Price=Price
 CreateQuestionGUI.lblNewLabel.text=Answers\:
+CreateQuestionGUI.questType.text=Question type\:
 Close=Close
 QuestionN=Question\#
 BrowseQuestionsGUI.lblBetOn.text=Bet on\:
 BrowseQuestionsGUI.MessageTextArea.text=\ 
-CreateQuestionGUI.textField.text=\ 
 NoQuestions=There are no questions yet for the event 
 ErrorEventHasFinished=Error\: Event Has Finished
 Events=Events
@@ -36,6 +36,6 @@ SelectUseCase=Welcome
 MainGUI_User.BifunctionalBtn.text=View Profile
 Event=Event
 Welcome=Welcome
-BrowseQuestionsGUI.btnNewButton.text=Bet
+BrowseQuestionsGUI.btnNewButton.text=bet
 QuestionCreated=Question created
 BrowseQuestionsGUI.lblEnterAmount.text=Enter amount ($)\:
