The question types, done!

--- a/BetAndRuin 21/src/Etiquetas.properties
+++ b/BetAndRuin 21/src/Etiquetas.properties
@@ -11,6 +11,7 @@ MainGUI.btnNewButton.text=Register
 Accept=Accept
 MainTitle=Bet & Ruin project
 QuestionAlreadyExist=Question Already Exists
+AnswerAlreadyExist= Answer Already Exist
 ListEvents=List of events
 Price=Price
 CreateQuestionGUI.lblNewLabel.text=Answers\:
