--- a/BetAndRuin 21/src/Etiquetas_eus.properties
+++ b/BetAndRuin 21/src/Etiquetas_eus.properties
@@ -6,6 +6,7 @@ ErrorEventHasFinished=Errorea\: Gertaera amaitu egin da
 ErrorNumber=Errorea: Zenbaki positiboa sartu
 ErrorQuestion=Error\: Galdera sartu
 ErrorQuestionAlreadyExist=Error\: Galdera existitzen da 
+ErrorAnswerAlreadyExist=Error: Erantzun hori badago
 ErrorAnswer=Error\: Sartu erantzun eta ehuneko berri bat
 Event=Gertaera
 EventDate=Gertaera eguna
