--- a/BetAndRuin 21/.classpath
+++ b/BetAndRuin 21/.classpath
@@ -9,10 +9,11 @@
 	<classpathentry kind="lib" path="resources/jcalendar-1.4.jar"/>
 	<classpathentry kind="lib" path="resources/objectdb.jar"/>
 	<classpathentry kind="lib" path="jgoodies-forms-1.8.0.jar" sourcepath="jgoodies-forms-1.8.0-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Users/user/git/BetAndRuin_repos/BetAndRuin 21/commons-collections4-4.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/user/git/BetAndRuin_repos/BetAndRuin 21/poi-3.17.jar"/>
-	<classpathentry kind="lib" path="C:/Users/user/git/BetAndRuin_repos/BetAndRuin 21/poi-ooxml-3.17.jar"/>
-	<classpathentry kind="lib" path="C:/Users/user/git/BetAndRuin_repos/BetAndRuin 21/poi-ooxml-schemas-3.17.jar"/>
-	<classpathentry kind="lib" path="C:/Users/user/git/BetAndRuin_repos/BetAndRuin 21/xmlbeans-2.6.0.jar"/>
+	<classpathentry kind="lib" path="commons-collections4-4.1.jar"/>
+	<classpathentry kind="lib" path="jgoodies-forms-1.8.0-sources.jar"/>
+	<classpathentry kind="lib" path="poi-3.17.jar"/>
+	<classpathentry kind="lib" path="poi-ooxml-3.17.jar"/>
+	<classpathentry kind="lib" path="poi-ooxml-schemas-3.17.jar"/>
+	<classpathentry kind="lib" path="xmlbeans-2.6.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
